--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -8,6 +8,7 @@ output: pdf_document
 ```{r packages-data, warning=FALSE, message=FALSE}
 library(tidyverse)
 crime <- read_csv("data/crime_and_incarceration_by_state.csv") 
+view(crime)
 ```
 
 
@@ -83,40 +84,13 @@ ggplot(data = state_crime,
   geom_point() + 
   geom_smooth()
 ```
-
-
-```{r percent-pop}
-crime<- crime %>%
-  group_by(year)%>%
-  mutate(percent_pop= sum(prisoner_count)/sum(state_population))
-  
- crime %>% 
-  ggplot(crime, mapping= aes(x=year, y=percent_pop))+
-  geom_line()+
-  labs(title = "title",
-  x = "Year", y = "Percent Population Incarcerated") +
-  theme_linedraw()
-```
-
-
-```{r Prisoners%-by-state-2001}
-crime<- crime %>%
-  filter(year == 2001)%>%
-  group_by(jurisdiction)%>%
-  mutate(prisoner_2001= prisoner_count/state_population)
-  
- crime %>% 
-  ggplot(crime, mapping= aes(x= jurisdiction, y=prisoner_2001))+
-  geom_col()+
-  labs(title = "title",
-  x = "Year", y = "prisoners 2001") +
-  theme_linedraw()+ 
-   theme(axis.text.x = element_text(angle = 60, hjust = 1))
-```
+prison population
 
 "violent_crime_total" is the sum of murder_manslaughter, rape_legacy, robbery, & agg_assault by year and state
 "property_crime_total" is the sum of burglary, larceny, & vehicle_theft
 
+
+possible question: correlation between population and prison population
 
 ```{r total-prisoners}
 crime<- crime %>%
@@ -128,6 +102,19 @@ crime<- crime %>%
   geom_line()+
   labs(title = "title",
   x = "Year", y = "Total US Prisoners") +
+  theme_linedraw()
+```
+```{r total-property-crime}
+crime<- crime %>%
+  filter(!is.na(property_crime_total))%>%
+  group_by(year)%>%
+  mutate(total_crime= sum(property_crime_total))
+  
+ crime %>% 
+  ggplot(crime, mapping= aes(x=year, y=total_crime))+
+  geom_line()+
+  labs(title = "title",
+  x = "Year", y = "Total Property Crime in the US") +
   theme_linedraw()
 ```
 
@@ -159,4 +146,52 @@ crime<- crime %>%
   x = "Year", y = "Total Violent Crime in the US") +
   theme_linedraw()
 ```
+
+```{r population}
+
+##not sure whats happening with this one
+crime<- crime %>%
+  filter(!is.na(state_population))%>%
+  group_by(year)%>%
+  mutate(pop= sum(state_population))
+
+ crime %>% 
+  ggplot(crime, mapping= aes(x=year, y=pop))+
+  geom_line()+
+  labs(title = "title",
+  x = "Year", y = "Population") +
+  theme_linedraw()
+```
+
+
+
+```{r percent-pop}
+crime<- crime %>%
+  group_by(year)%>%
+  mutate(percent_pop= sum(prisoner_count)/sum(state_population))
+  
+ crime %>% 
+  ggplot(crime, mapping= aes(x=year, y=percent_pop))+
+  geom_line()+
+  labs(title = "title",
+  x = "Year", y = "Percent Population Incarcerated") +
+  theme_linedraw()
+```
+
+
+```{r Prisoners%-by-state-2001}
+crime<- crime %>%
+  filter(year == 2001)%>%
+  group_by(jurisdiction)%>%
+  mutate(prisoner_2001= prisoner_count/state_population)
+  
+ crime %>% 
+  ggplot(crime, mapping= aes(x= jurisdiction, y=prisoner_2001))+
+  geom_col()+
+  labs(title = "title",
+  x = "Year", y = "prisoners 2001") +
+  theme_linedraw()+ 
+   theme(axis.text.x = element_text(angle = 60, hjust = 1))
+```
+
 
